# dependencies

./: .gitmodules  README.md
erpc_client/: Makefile  make.bat
erpc_client/client/: CMakeLists.txt  StepProfilerInterface_client.cpp  StepProfilerInterface_client.hpp  StepProfilerInterface_common.h  StepProfilerInterface_common.hpp  StepProfilerInterface_interface.cpp  StepProfilerInterface_interface.hpp  c_StepProfilerInterface_client.cpp  c_StepProfilerInterface_client.h  client.cpp
tcpserver/: tcpserver.cpp  tcpserver.sln  tcpserver.vcxproj  tcpserver.vcxproj.filters
